# image-chat

./: .gitignore  CLAUDE.md  README.md  STEP_BY_STEP.md  pyproject.toml
agent/: callbacks.py  config.py  conversation_utils.py  ensemble.py  image_utils.py  logging_config.py  mcp_client.py  structures.py  visualize.py
agent/graph/: chat_graph.py  state.py
agent/graph/nodes/: conversation.py  detection.py  intent_routing.py  preprocessing.py  qna.py
chat_api/: main.py  models.py  session_manager.py
detection_mcp_server/: __init__.py  config.py  main.py  models.py
detection_mcp_server/detectors/: __init__.py  base.py  florence2.py  grounding_dino.py  registry.py  sam2.py
gradio_chat_client/: __init__.py  config.py  export.py  interface.py  main.py  state.py  visualization.py
